--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/app": "^0.11.4",
+    "@firebase/storage": "^0.13.7",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.4",
     "firebase": "^11.6.0",
@@ -17,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.5",
