--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.9",
+    "prop-types": "^15.8.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "validator": "^13.12.0"
